syntax = "proto3";

package presence;

option csharp_namespace = "Mobius.Proto.Social";
option go_package = "github.com/justjack1521/mevium/pkg/genproto/protosocial";

import "protosocial/social.proto";

enum SocialRequestType {
  NONE = 0;
  FOLLOW_PLAYER = 1400;
  UNFOLLOW_PLAYER = 1500;
  GET_SOCIAL_DATA = 2900;
}

message FetchPlayerSocialInfoRequest {
}

message FetchPlayerSocialInfoResponse {
  repeated ProtoPlayerSocialInfo following_list = 1;
  repeated ProtoPlayerSocialInfo follower_list = 2;
  repeated ProtoPlayerSocialInfo rental_players = 3;
}

message FollowPlayerRequest {
  string target_id = 2;
}

message PlayerSearchRequest {
  string player_id = 1;
}

message UnfollowPlayerRequest {
  string target_id = 2;
}

message GetPlayerIdentityRequest {
  string player_id = 1;
  string target_id = 2;
}