syntax = "proto3";

package presence;

option csharp_namespace = "Mobius.Proto.Social";
option go_package = "github.com/justjack1521/mevium/pkg/genproto/protosocial";

import "protosocial/social.proto";

message FollowPlayerResponse {
  presence.ProtoPlayerSocialInfo player_info = 1;
}

message PlayerSearchResponse {
  presence.ProtoPlayerInfo player_info = 1;
}

message UnfollowPlayerResponse {
  string player_id = 1;
}

message GetPlayerIdentityResponse {
  ProtoPlayerIdentity player_identity = 1;
}